Building docs on Py3.12 and ubuntu 24.04

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,11 +7,11 @@ version: 2
 
 # Set the version of Python and other tools you might need
 build:
-  os: ubuntu-22.04
+  os: ubuntu-lts-latest
   apt_packages:
     - default-jre  # This seems to be ignored
   tools:
-    python: "3.9"
+    python: "3.12"
   # We can only define the content of the final deployment, if we do the complete build on our own.apt_packages:
   # So we need to handle package installation, build start and copying the right files for deployment.
   commands:
