Add ci workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,3 +104,4 @@ warn_unused_ignores = true
 strict_equality = true
 extra_checks = true
 no_implicit_reexport = true
+exclude = ["^docs/", "^demo/", "^\\.venv/"]
