--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,3 +22,12 @@ repos:
     rev: v0.16.0
     hooks:
       - id: yamlfmt
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.16.0
+    hooks:
+      - id: mypy
+        exclude: ^(docs|demo)/
+        additional_dependencies:
+          - sphinx
+          - types-docutils
+          - types-beautifulsoup4
