--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,10 +13,28 @@ jobs:
       - name: Install dependencies
         run: uv sync --group dev
       - uses: pre-commit/action@v3.0.1
+  docs:
+    name: docs-${{ matrix.target }}-py${{ matrix.python }}-${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        target: [html, pdf]
+        python: ["3.10", "3.11", "3.12", "3.13"]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+      - name: Set up Python
+        run: uv python install ${{ matrix.python }}
+      - name: Build docs (${{ matrix.target }})
+        run: make docs-${{ matrix.target }}
   all_good:
     if: ${{ !cancelled() }}
     needs:
       - pre-commit
+      - docs
     runs-on: ubuntu-latest
     steps:
       - name: Decide whether the needed jobs succeeded or failed
