--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,12 +24,26 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v4
+      - name: Install WeasyPrint dependencies (Ubuntu)
+        if: runner.os == 'Linux'
+        run: sudo apt-get update && sudo apt-get install -y libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf2.0-0 libffi-dev libcairo2
+      - name: Install WeasyPrint dependencies (macOS)
+        if: runner.os == 'macOS'
+        run: brew install pango libffi
+      - name: Install WeasyPrint dependencies (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          $env:PATH = "C:\msys64\mingw64\bin;$env:PATH"
+          C:\msys64\usr\bin\pacman -S --noconfirm mingw-w64-x86_64-pango mingw-w64-x86_64-gdk-pixbuf2
+        shell: pwsh
       - name: Install uv
         uses: astral-sh/setup-uv@v5
       - name: Set up Python
         run: uv python install ${{ matrix.python }}
       - name: Build docs (${{ matrix.target }})
         run: make docs-${{ matrix.target }}
+        env:
+          PATH: ${{ runner.os == 'Windows' && 'C:\msys64\mingw64\bin;' || '' }}${{ env.PATH }}
   all_good:
     if: ${{ !cancelled() }}
     needs:
