--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,11 @@ jobs:
         target: [html, pdf]
         python: ["3.10", "3.11", "3.12", "3.13"]
         os: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+          - target: html
+            builder: html
+          - target: pdf
+            builder: simplepdf
     steps:
       - uses: actions/checkout@v4
       - name: Install WeasyPrint dependencies (Ubuntu)
@@ -40,8 +45,11 @@ jobs:
         uses: astral-sh/setup-uv@v5
       - name: Set up Python
         run: uv python install ${{ matrix.python }}
+      - name: Install docs dependencies
+        run: uv sync --extra docs
       - name: Build docs (${{ matrix.target }})
-        run: make docs-${{ matrix.target }}
+        run: uv run sphinx-build -M ${{ matrix.builder }} docs docs/_build
+        shell: bash
         env:
           PATH: ${{ runner.os == 'Windows' && 'C:\msys64\mingw64\bin;' || '' }}${{ env.PATH }}
   all_good:
